[package]
name = "caching-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rusqlite = { version = "0.29", features = [
    "bundled",
    "chrono",
    "url",
    "serde_json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", default-features = false }
lazy-regex = "3.0"
url = "2.3"
awc = { version = "3.0", features = ["rustls"] }
http = "*"
clap = { version = "4.0.24", features = ["derive"] }
